tests/ui/const-generics/generic_const_exprs/issue-80742.stderr
error[E0599]: the function or associated item `new` exists for struct `Inline<dyn Debug>`, but its trait bounds were not satisfied
  --> $DIR/issue-80742.rs:36:36
   |
LL | struct Inline<T>
   | ---------------- function or associated item `new` not found for this struct
...
LL |     let dst = Inline::<dyn Debug>::new(0);
   |                                    ^^^ function or associated item cannot be called on `Inline<dyn Debug>` due to unsatisfied trait bounds
   |
note: if you're trying to build a new `Inline<dyn Debug>`, consider using `Inline::<T>::new` which returns `Inline<_>`
  --> $DIR/issue-80742.rs:30:5
   |
LL |     pub fn new(val: T) -> Inline<T> {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: trait bound `dyn Debug: Sized` was not satisfied
  --> $DIR/issue-80742.rs:26:6
   |
LL | impl<T> Inline<T>
   |      ^  ---------
   |      |
   |      unsatisfied trait bound introduced here
help: consider relaxing the type parameter's implicit `Sized` bound
   |
LL | impl<T: ?Sized> Inline<T>
   |       ++++++++

error: internal compiler error: compiler/rustc_const_eval/src/interpret/step.rs:LL:CC: SizeOf MIR operator called for unsized type dyn Debug
  --> $SRC_DIR/core/src/mem/mod.rs:LL:COL

Box<dyn Any>
query stack during panic:
#0 [eval_to_allocation_raw] const-evaluating + checking `Inline::{constant#0}`
#1 [eval_to_valtree] evaluating type-level constant
end of query stack
error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0599`.
